<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/checkout_container_layout"
        android:elevation="24dp"
        android:paddingHorizontal="@dimen/large_margin"
        android:paddingVertical="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/totalPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_harga"
            android:textAllCaps="false"
            android:textColor="#0277BD"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalPriceTitle"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/sample_price"
            android:textColor="#FF8F00"
            android:textSize="17sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="#FF8F00"
            android:text="@string/order"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>